feat(docker-compose.yml) updated cbioportal version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: '3'
 services:
   cbioportal:
     restart: unless-stopped
-    image: docker.miracum.org/cbioportal/cbioportal:2.2.0
+    image: docker.miracum.org/cbioportal/cbioportal:3.0.1
+    #build: .
+    #image: cbioportal:3.0.1
     container_name: cbioportal_container
     environment: 
       CATALINA_OPTS: '-Xms2g -Xmx4g' 
