--- a/config/portal.properties
+++ b/config/portal.properties
@@ -4,10 +4,10 @@ app.name=cbioportal
 # database
 db.user=cbio
 db.password=P@ssword1
-db.host=cbioportal_database_container
+db.host=cbioportal_database
 db.portal_db_name=cbioportal
 db.driver=com.mysql.jdbc.Driver
-db.connection_string=jdbc:mysql://cbioportal_database_container/
+db.connection_string=jdbc:mysql://cbioportal_database/
 db.tomcat_resource_name=jdbc/cbioportal
 # this should normally be set to false. In some cases you could set this to true (e.g. for testing a feature of a newer release that is not related to the schema change in expected db version above):
 db.suppress_schema_version_mismatch_errors=false
