--- a/config/hapi.properties
+++ b/config/hapi.properties
@@ -10,7 +10,7 @@ fhir_version=R4
 # (the web UI similar to the one at http://hapi.fhir.org) will use to
 # connect internally to the FHIR server, so this also needs to be a name
 # accessible from the server itself.
-server.address=http://docker-bionic:8081/fhir/
+server.address=http://hapifhir:8080/fhir/
 # if set, this overrides the "self" url for all returned resources irregardless of the set server.address
 # or of the request's Host header.
 server.address.override=
