--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     networks:
      - cbioportal_net
     command: /bin/sh -c "java -Xms2g -Xmx4g -Dauthenticate=noauthsessionservice -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -Dfrontend.config=/cbioportal/frontend.json -jar webapp-runner.jar /cbioportal-webapp"
+    #command: /bin/sh -c "java -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms2g -Xmx4g -Dauthenticate=noauthsessionservice -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -Dfrontend.config=/cbioportal/frontend.json -jar webapp-runner.jar /cbioportal-webapp"
   cbioportal_database:
     restart: unless-stopped
     image: mysql:5.7
@@ -39,9 +40,11 @@ services:
     container_name: cbioportal_session_container
     environment:
       - "SERVER_PORT=5000"
-      - "JAVA_OPTS=-Dspring.data.mongodb.uri=mongodb://mongoDB:27017/session-service"
+      - "JAVA_OPTS=-Dspring.data.mongodb.uri=mongodb://cbioportal_session_database:27017/session-service"
     volumes:
       - cbioportal_data:/data/db
+    #ports:
+    #  - "5000:5000"
     depends_on:
       - cbioportal_session_database
     networks:
@@ -52,6 +55,8 @@ services:
     container_name: cbioportal_session_database_container
     environment:
       MONGO_INITDB_DATABASE: session_service
+    #ports:
+    #  - "27017:27017"
     networks:
       - cbioportal_net
   fhirspark:
@@ -64,7 +69,7 @@ services:
     depends_on:
       - hapiserver
     environment:
-      FHIRSPARK_FHIRBASE: http://hapiserver:8080/fhir/
+      FHIRSPARK_FHIRBASE: http://hapifhir:8080/fhir/
     networks:
       - cbioportal_net
   hapiserver:
