--- a/config/portal.properties
+++ b/config/portal.properties
@@ -139,6 +139,7 @@ segfile.url=http://cbio.mskcc.org/cancergenomics/gdac-portal/seg/
 
 # Enable OncoKB annotation (true, false)
 show.oncokb=true
+oncokb.token=
 
 # Enable Chang's hotspot list (true, false)
 show.hotspot=true
