Rework of docker-compose

--- a/config/hapi.properties
+++ b/config/hapi.properties
@@ -10,17 +10,16 @@ fhir_version=R4
 # (the web UI similar to the one at http://hapi.fhir.org) will use to
 # connect internally to the FHIR server, so this also needs to be a name
 # accessible from the server itself.
-server.address=http://hapifhir:8080/fhir/
+server.address=http://hapiserver:8080/fhir/
 # if set, this overrides the "self" url for all returned resources irregardless of the set server.address
 # or of the request's Host header.
-server.address.override=
 enable_index_missing_fields=false
 auto_create_placeholder_reference_targets=false
 enforce_referential_integrity_on_write=false
 enforce_referential_integrity_on_delete=false
 default_encoding=JSON
 etag_support=ENABLED
-reuse_cached_search_results_millis=60000
+reuse_cached_search_results_millis=5000
 retain_cached_searches_mins=60
 default_page_size=20
 max_page_size=200
