--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,7 +14,7 @@ services:
      - cbioportal_session
     networks:
      - cbioportal_net
-    command: /bin/sh -c "java -Xms2g -Xmx4g -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.token=${ONCOKBTOKEN} -Dauthenticate=noauthsessionservice -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -jar webapp-runner.jar /cbioportal-webapp"
+    command: /bin/sh -c "java -Xms2g -Xmx4g -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.token=${ONCOKBTOKEN} -Dauthenticate=noauthsessionservice -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -jar webapp-runner.jar /cbioportal-webapp"
   cbioportal_database:
     restart: unless-stopped
     image: mysql:5.7
@@ -28,6 +28,9 @@ services:
      - ./data/cgds.sql:/docker-entrypoint-initdb.d/cgds.sql:ro
      - ./data/seed-cbioportal_hg19_v2.7.3.sql.gz:/docker-entrypoint-initdb.d/seed.sql.gz:ro
      - cbioportal_data:/var/lib/mysql 
+    ports:
+      - "5005:5005"
+      - "8081:8080"
     networks:
      - cbioportal_net
   cbioportal_session:
@@ -41,6 +44,8 @@ services:
       - cbioportal_data:/data/db
     depends_on:
       - cbioportal_session_database
+    ports:
+      - "5000:5000"
     networks:
       - cbioportal_net
   cbioportal_session_database:
@@ -49,6 +54,8 @@ services:
     container_name: cbioportal_session_database_container
     environment:
       MONGO_INITDB_DATABASE: session_service
+    ports:
+      - "27017:27017"
     networks:
       - cbioportal_net
   fhirspark:
@@ -62,6 +69,8 @@ services:
       FHIRSPARK_SENDHL7V2: ${HL7V2ENABLE}
       FHIRSPARK_HL7V2SERVER: ${HL7V2SERVER}
       FHIRSPARK_HL7V2PORT: ${HL7V2PORT}
+    ports:
+      - "3001:3001"
     networks:
       - cbioportal_net
   hapiserver:
@@ -71,6 +80,8 @@ services:
     volumes:
       - ./config/hapi.properties:/hapi-config/hapi.properties:ro
       - cbioportal_data:/var/lib/jetty/target
+    ports:
+      - "8082:8080"
     networks:
       - cbioportal_net
   nginx:
