--- a/services/nginx/cbioportal.conf
+++ b/services/nginx/cbioportal.conf
@@ -8,7 +8,8 @@ server {
     sendfile_max_chunk 5m;
     tcp_nopush on;
     tcp_nodelay on;
-    root /var/www/certbot;
+    root /usr/share/nginx/html
+
   }
 
   client_max_body_size 0;
@@ -23,6 +24,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     proxy_pass http://cbioportal:8080;
+
   }
 
   location /therapyRecommendation {
@@ -35,6 +37,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     proxy_pass http://fhirspark:3001;
+
   }
 
   location /fhir {
@@ -47,6 +50,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     proxy_pass http://hapiserver:8080;
+
   }
 
   error_page 500 502 503 504 /50x.html;
@@ -54,6 +58,7 @@ server {
   location = /50x.html {
 
     root /usr/share/nginx/html;
+
   }
 
 
