--- a/services/nginx/cbioportal.conf
+++ b/services/nginx/cbioportal.conf
@@ -27,7 +27,7 @@ server {
 
   }
 
-  location /therapyRecommendation {
+  location /mtb {
 
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
