--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -8,7 +8,7 @@ server {
     sendfile_max_chunk 5m;
     tcp_nopush on;
     tcp_nodelay on;
-    root /usr/share/nginx/html
+    root /usr/share/nginx/html;
 
   }
 
