Disable validation, handle it later on client side

--- a/config/hapi.properties
+++ b/config/hapi.properties
@@ -49,7 +49,7 @@ test.port=
 # Validation
 ###################################################
 # Should all incoming requests be validated
-validation.requests.enabled=true
+validation.requests.enabled=false
 # Should outgoing responses be validated
 validation.responses.enabled=false
 ###################################################
