use postgres for hapi server to fix #1

--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ PORT=8080
 MYSQL_ROOT_PASSWORD=P@ssword1
 MYSQL_USER_PASSWORD=P@ssword1
 
+#PostgreSQL configuration for FHIR Database
+POSTGRES_USER_PASSWORD=P@ssword2
+
 #cBioPortal configuration
 #ONCOKBTOKEN=
 
