--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,9 +70,29 @@ services:
     restart: unless-stopped
     image: docker.miracum.org/miracum-data/hapi-fhir-jpaserver:8.0.1
     container_name: cbioportal_fhirspark_hapiserver
+    depends_on:
+      - hapi-postgres
+    environment:
+      server.address: "http://hapiserver:8080/fhir/"
+      reuse_cached_search_results_millis: 5000
+      datasource.url: "jdbc:postgresql://hapi-postgres:5432/hapi?currentSchema=public"
+      datasource.username: hapiserver
+      datasource.password: ${POSTGRES_USER_PASSWORD:-P@ssword2}
+      hibernate.dialect: org.hibernate.dialect.PostgreSQL95Dialect
+      datasource.driver: org.postgresql.Driver
+      validation.requests.enabled: "false"
+    networks:
+      - cbioportal_net
+  hapi-postgres:
+    restart: unless-stopped
+    image: postgres:12.3-alpine
+    container_name: cbioportal_fhirspark_database
     volumes:
-      - ./config/hapi.properties:/hapi-config/hapi.properties:ro
-      - cbioportal_data:/var/lib/jetty/target
+      - fhir_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: hapiserver
+      POSTGRES_PASSWORD: ${POSTGRES_USER_PASSWORD:-P@ssword2}
+      POSTGRES_DB: hapi
     networks:
       - cbioportal_net
   nginx:
@@ -91,3 +111,4 @@ networks:
   
 volumes:
   cbioportal_data:
+  fhir_data:
