--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -124,6 +124,7 @@ services:
       - "${PORT:-8080}:8080"
     depends_on:
       - cbioportal
+      - fhirspark
     networks:
       - cbioportal_net
 
