--- a/.github/workflows/docker-build-dev.yml
+++ b/.github/workflows/docker-build-dev.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build containers
+      - name: Build dev containers
         run: docker-compose --f docker-compose-dev.yml build
