--- a/config/portal.properties
+++ b/config/portal.properties
@@ -138,6 +138,7 @@ segfile.url=http://cbio.mskcc.org/cancergenomics/gdac-portal/seg/
 
 # Enable OncoKB annotation (true, false)
 show.oncokb=true
+oncokb.public_api.url=https://www.oncokb.org/api/v1
 
 # Enable Chang's hotspot list (true, false)
 show.hotspot=true
