--- a/services/fhirspark/Dockerfile
+++ b/services/fhirspark/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3-openjdk-11 as build
 LABEL maintainer="Niklas Reimer <niklas@nr205.de>"
 
-RUN apt update && apt install git -y
+RUN apt-get update && apt-get install git -y
 
 RUN git clone https://github.com/nr23730/fhirspark.git /fhirspark
 WORKDIR /fhirspark
