--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,9 @@ services:
       FHIRSPARK_SENDHL7V2: ${HL7V2ENABLE}
       FHIRSPARK_HL7V2SERVER: ${HL7V2SERVER}
       FHIRSPARK_HL7V2PORT: ${HL7V2PORT}
+    volumes:
+      - ./data/drugs.json:/drugs.json:ro
+      - ./data/hgnc.csv:/hgnc.csv:ro
     networks:
       - cbioportal_net
   hapiserver:
