--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - hapiserver
     environment:
       FHIRSPARK_FHIRBASE: http://hapiserver:8080/fhir/
-      FHIRSPARK_SENDHL7V2: ${HL7V2ENABLE}
+      FHIRSPARK_SENDHL7V2: ${HL7V2ENABLE:-false}
       FHIRSPARK_HL7V2SERVER: ${HL7V2SERVER}
       FHIRSPARK_HL7V2PORT: ${HL7V2PORT}
     volumes:
