--- a/.github/workflows/docker-build-research.yml
+++ b/.github/workflows/docker-build-research.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build containers
+      - name: Build research containers
         run: docker-compose --f docker-compose-research.yml build
