[genomenexus] add: local genomenexus

--- a/config/portal.properties
+++ b/config/portal.properties
@@ -140,6 +140,10 @@ segfile.url=http://cbio.mskcc.org/cancergenomics/gdac-portal/seg/
 show.oncokb=true
 oncokb.public_api.url=https://www.oncokb.org/api/v1
 
+# enable Genomenexus annotation
+genomenexus.url=/genome-nexus
+show.mutation_mappert_tool.grch38=false
+
 # Enable Chang's hotspot list (true, false)
 show.hotspot=true
 hotspots.url=https://www.cancerhotspots.org/api/
