--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -53,6 +53,20 @@ server {
 
   }
 
+  location /genome-nexus {
+
+    rewrite ^/genome-nexus/(.*) /$1 break;
+    proxy_headers_hash_max_size 512;
+    proxy_headers_hash_bucket_size 64;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    proxy_pass http://genomenexus:8888;
+
+  }
+
   error_page 500 502 503 504 /50x.html;
 
   location = /50x.html {
