--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,32 @@ services:
       - fhirspark
     networks:
       - cbioportal_net
+  genomenexus:
+    image: docker.miracum.org/cbioportal/genome-nexus:${RELEASE:-latest}
+    environment:
+      - SERVER_PORT=8888
+    restart: unless-stopped
+    depends_on:
+      - genomenexus_db
+      - genomenexus_vep
+    command: /bin/sh -c "java -Dspring.data.mongodb.uri=mongodb://genomenexus_db:27017/annotator -Dgn_vep.region.url=http://genomenexus_vep:8080/vep/human/region/VARIANT -jar /app.war"
+    networks:
+      - cbioportal_net
+  genomenexus_db:
+    image: docker.miracum.org/cbioportal/genome-nexus-db:${RELEASE:-latest}
+    environment:
+      - REF_ENSEMBL_VERSION=ensembl92_grch37
+      - SPECIES=homo_sapiens
+    restart: unless-stopped
+    networks:
+      - cbioportal_net
+  genomenexus_vep:
+    image: docker.miracum.org/cbioportal/genome-nexus-vep:${RELEASE:-latest}
+    environment:
+      - VEP_ASSEMBLY=GRCh37
+    restart: unless-stopped
+    networks:
+      - cbioportal_net
 
 networks:
   cbioportal_net: 
