[nginx] add: make nginx wait for genome-nexus

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -130,6 +130,7 @@ services:
     depends_on:
       - cbioportal
       - fhirspark
+      - genomenexus
     networks:
       - cbioportal_net
   genomenexus:
