--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,7 @@ services:
     depends_on:
       - cbioportal
       - fhirspark
+      - genomenexus
     networks:
       - cbioportal_net
   genomenexus:
