[cbioportal] add: alpine base

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#Release version e.g. 2020-1 or simply latest
+#Release version e.g. 2020q2 or simply latest
 RELEASE=latest
 
 #Network configuration
