[fhirspark] add: distroless base

--- a/services/fhirspark/Dockerfile
+++ b/services/fhirspark/Dockerfile
@@ -1,15 +1,9 @@
 FROM maven:3-openjdk-11 as build
-LABEL maintainer="Niklas Reimer <niklas@nr205.de>"
-
-RUN apt-get update && apt-get install git -y
-
 RUN git clone https://github.com/nr23730/fhirspark.git /fhirspark
 WORKDIR /fhirspark
 RUN mvn -DskipTests clean package
 
-
-FROM openjdk:11-jre-slim
-
-COPY --from=build /fhirspark/target/fhirspark-*-jar-with-dependencies.jar /app.jar
-
-CMD ["java", "-jar", "/app.jar"]
+FROM gcr.io/distroless/java-debian10:11
+LABEL maintainer="Niklas Reimer <niklas.reimer@uksh.de>"
+COPY --from=build /fhirspark/target/fhirspark-*-jar-with-dependencies.jar /app/fhirspark.jar
+CMD ["/app/fhirspark.jar"]
