--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,7 +20,7 @@ services:
       - "8081:8080"
     networks:
      - cbioportal_net
-    command: /bin/sh -c "java -Xmx4g -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005 -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.token=${ONCOKBTOKEN} -Dauthenticate=${AUTHENTICATE:-noauthsessionservice} -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -jar webapp-runner.jar /cbioportal-webapp"
+    command: /bin/sh -c "java -Xmx4g -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005 -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.token=${ONCOKBTOKEN} -Dgenomenexus.url=/genome-nexus -Dauthenticate=noauthsessionservice -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -jar webapp-runner.jar -AmaxHttpHeaderSize=16384 -AconnectionTimeout=20000 --enable-compression /cbioportal-webapp"
   cbioportal_database:
     restart: unless-stopped
     image: mariadb:latest
@@ -48,8 +48,6 @@ services:
     environment:
       SERVER_PORT: 5000
       JAVA_OPTS: -Dspring.data.mongodb.uri=mongodb://cbioportal_session_database:27017/session-service
-    volumes:
-      - cbioportal_data:/data/db
     depends_on:
       - cbioportal_session_database
     ports:
@@ -62,6 +60,8 @@ services:
     container_name: cbioportal_session_database_container
     environment:
       MONGO_INITDB_DATABASE: session_service
+    volumes:
+      - cbioportal_session_data:/data/db
     ports:
       - "27017:27017"
     networks:
@@ -171,4 +171,5 @@ networks:
   
 volumes:
   cbioportal_data:
+  cbioportal_session_data:
   fhir_data:
