--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -15,7 +15,7 @@ services:
      - cbioportal_session
     networks:
      - cbioportal_net
-    command: /bin/sh -c "java -Xms2g -Xmx4g -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.token=${ONCOKBTOKEN} -Dauthenticate=${AUTHENTICATE:-noauthsessionservice} -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -jar webapp-runner.jar /cbioportal-webapp"
+    command: /bin/sh -c "java -Xms2g -Xmx4g -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.token=${ONCOKBTOKEN} -Dgenomenexus.url=/genome-nexus -Dauthenticate=noauthsessionservice -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -jar webapp-runner.jar -AmaxHttpHeaderSize=16384 -AconnectionTimeout=20000 --enable-compression /cbioportal-webapp"
   cbioportal_database:
     restart: unless-stopped
     image: mariadb:latest
@@ -41,8 +41,6 @@ services:
     environment:
       SERVER_PORT: 5000
       JAVA_OPTS: -Dspring.data.mongodb.uri=mongodb://cbioportal_session_database:27017/session-service
-    volumes:
-      - cbioportal_data:/data/db
     depends_on:
       - cbioportal_session_database
     networks:
@@ -53,6 +51,8 @@ services:
     container_name: cbioportal_session_database_container
     environment:
       MONGO_INITDB_DATABASE: session_service
+    volumes:
+      - cbioportal_session_data:/data/db
     networks:
       - cbioportal_net
   nginx:
@@ -98,3 +98,4 @@ networks:
   
 volumes:
   cbioportal_data:
+  cbioportal_session_data:
