Set Dauthenticate parameter via env

--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@ POSTGRES_USER_PASSWORD=P@ssword2
 #cBioPortal configuration
 #ONCOKBTOKEN=
 
+#Authentication configuration
+AUTHENTICATE=noauthsessionservice
+
 #Therapy recommendation - HL7 v2 configuration (optional)
 #HL7V2ENABLE=true
 #HL7V2SERVER=hostname-here
