--- a/.env
+++ b/.env
@@ -17,6 +17,10 @@ POSTGRES_USER_PASSWORD=P@ssword2
 #Authentication configuration
 AUTHENTICATE=noauthsessionservice
 
+#Annotation configuration
+ENABLE_CIVIC=true
+ENABLE_MYCANCERGENOME=false
+
 #Therapy recommendation - HL7 v2 configuration (optional)
 #HL7V2ENABLE=true
 #HL7V2SERVER=hostname-here
