--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ AUTHENTICATE=noauthsessionservice
 
 #Annotation configuration
 ENABLE_CIVIC=true
+#Please disable (set to false) when using cBioPortal with patient identifiable data due My Cancer Genome license restrictions.
 ENABLE_MYCANCERGENOME=false
 
 #Therapy recommendation - HL7 v2 configuration (optional)
