--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,8 @@ services:
       - cbioportal_net
   genomenexus_db:
     image: docker.miracum.org/cbioportal/genome-nexus-db:${RELEASE:-latest}
+    volumes:
+      - genomenexus_data:/bitnami/mongodb
     environment:
       - REF_ENSEMBL_VERSION=grch37_ensembl92
       - SPECIES=homo_sapiens
@@ -146,3 +148,4 @@ volumes:
   cbioportal_data:
   cbioportal_session_data:
   fhir_data:
+  genomenexus_data:
