[cbioportal] add: quick search

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ POSTGRES_USER_PASSWORD=P@ssword2
 
 #cBioPortal configuration
 #ONCOKBTOKEN=
+ENABLE_QUICKSEARCH=true
 
 #Authentication configuration
 AUTHENTICATE=noauthsessionservice
