--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -15,7 +15,7 @@ services:
      - cbioportal_session
     networks:
      - cbioportal_net
-    command: /bin/sh -c "java -Xms2g -Xmx4g -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.public_api.url=https://www.oncokb.org/api/v1 -Doncokb.token=${ONCOKBTOKEN} -Dgenomenexus.url=/genome-nexus -Dauthenticate=${AUTHENTICATE:-noauthsessionservice} -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -Dshow.civic=${ENABLE_CIVIC:-true} -Dmycancergenome.show=${ENABLE_MYCANCERGENOME:-true} -Dquick_search.enabled=${ENABLE_QUICKSEARCH:-true} -jar webapp-runner.jar -AmaxHttpHeaderSize=16384 -AconnectionTimeout=20000 --enable-compression /cbioportal-webapp"
+    command: /bin/sh -c "java -Xms2g -Xmx4g -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.public_api.url=${ONCOKB_URL:-https://public.api.oncokb.org/api/v1} -Doncokb.token=${ONCOKB_TOKEN} -Dgenomenexus.url=/genome-nexus -Dauthenticate=${AUTHENTICATE:-noauthsessionservice} -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -Dshow.civic=${ENABLE_CIVIC:-true} -Dmycancergenome.show=${ENABLE_MYCANCERGENOME:-true} -Dquick_search.enabled=${ENABLE_QUICKSEARCH:-true} -jar webapp-runner.jar -AmaxHttpHeaderSize=16384 -AconnectionTimeout=20000 --enable-compression /cbioportal-webapp"
   cbioportal_database:
     restart: unless-stopped
     image: mariadb:latest
