--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -13,6 +13,7 @@ services:
     volumes:
      - ./study:/study/
      - ./config/portal.properties:/cbioportal/portal.properties:ro
+     - ./config/frontend.json:/cbioportal/frontend.json:ro
     depends_on:
      - cbioportal_database
      - cbioportal_session
@@ -21,7 +22,7 @@ services:
       - "8081:8080"
     networks:
      - cbioportal_net
-    command: /bin/sh -c "java -Xmx4g -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005 -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.public_api.url=${ONCOKB_URL:-https://public.api.oncokb.org/api/v1} -Doncokb.token=${ONCOKB_TOKEN} -Dgenomenexus.url=/genome-nexus -Dauthenticate=${AUTHENTICATE:-noauthsessionservice} -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -Dshow.civic=${ENABLE_CIVIC:-true} -Dmycancergenome.show=${ENABLE_MYCANCERGENOME:-false} -Dquick_search.enabled=${ENABLE_QUICKSEARCH:-true} -jar webapp-runner.jar -AmaxHttpHeaderSize=16384 -AconnectionTimeout=20000 --enable-compression /cbioportal-webapp"
+    command: /bin/sh -c "java -Xmx4g -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005 -Ddb.password=${MYSQL_USER_PASSWORD:-P@ssword1} -Doncokb.public_api.url=${ONCOKB_URL:-https://public.api.oncokb.org/api/v1} -Doncokb.token=${ONCOKB_TOKEN} -Dgenomenexus.url=/genome-nexus -Dauthenticate=${AUTHENTICATE:-noauthsessionservice} -Dsession.service.url=http://cbioportal_session:5000/api/sessions/my_portal/ -Dshow.civic=${ENABLE_CIVIC:-true} -Dmycancergenome.show=${ENABLE_MYCANCERGENOME:-false} -Dquick_search.enabled=${ENABLE_QUICKSEARCH:-true} -Dfrontend.config=/cbioportal/frontend.json -jar webapp-runner.jar -AmaxHttpHeaderSize=16384 -AconnectionTimeout=20000 --enable-compression /cbioportal-webapp"
   cbioportal_database:
     restart: unless-stopped
     image: mariadb:latest
