--- a/tools/cbpManager.deploy/docker-compose.yml
+++ b/tools/cbpManager.deploy/docker-compose.yml
@@ -10,13 +10,11 @@ services:
     build: ./cbpmanager
     image: cbpmanager
     container_name: cbpmanager_container
-    ports:
-      - 3838:3838
     networks:
      - cbpmanager_net
     volumes:
-      - "${STUDY_DIR}:/srv/shiny-server/study/"
-      - "${LOG_DIR}:/srv/shiny-server/logs/"
+      - "${STUDY_DIR:-../../study/}:/srv/shiny-server/study/"
+      - "${LOG_DIR:-./cbpmanager/logs/}:/srv/shiny-server/logs/"
     command: ['Rscript', '-e', "cbpManager::cbpManager(studyDir = '/srv/shiny-server/study/', logDir = '/srv/shiny-server/logs/', host = '0.0.0.0', port = 3838)"]
   cbpmanager-shinyproxy:
     restart: unless-stopped
@@ -24,7 +22,7 @@ services:
     image: cbpmanager-shinyproxy
     container_name: cbpmanager_shinyproxy_container
     ports:
-      - "${PORT:-8081}:8080"
+      - "${PORT:-8180}:8080"
     environment:
       - "WORK_DIR=${PWD}"
     volumes:
