--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   cbioportal:
     restart: unless-stopped
-    image: docker.miracum.org/cbioportal/cbioportal:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/cbioportal:${RELEASE:-latest}
     build:
       context: services/cbioportal
     container_name: cbioportal_container
@@ -69,7 +69,7 @@ services:
       - cbioportal_net
   fhirspark:
     restart: unless-stopped
-    image: docker.miracum.org/cbioportal/fhirspark:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/fhirspark:${RELEASE:-latest}
     build:
       context: services/fhirspark
     container_name: cbioportal_fhirspark
@@ -123,7 +123,7 @@ services:
       - cbioportal_net
   nginx:
     restart: unless-stopped
-    image: docker.miracum.org/cbioportal/cbioproxy:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/cbioproxy:${RELEASE:-latest}
     build:
       context: services/cbioproxy
     container_name: cbioportal_nginx_container
@@ -136,7 +136,7 @@ services:
     networks:
       - cbioportal_net
   genomenexus:
-    image: docker.miracum.org/cbioportal/genome-nexus:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/genome-nexus:${RELEASE:-latest}
     build:
       context: services/genome-nexus
     ports:
@@ -158,7 +158,7 @@ services:
     networks:
       - cbioportal_net
   genomenexus_db:
-    image: docker.miracum.org/cbioportal/genome-nexus-db:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/genome-nexus-db:${RELEASE:-latest}
     build: https://github.com/genome-nexus/genome-nexus-importer.git
     ports:
       - "27018:27017"
@@ -171,7 +171,7 @@ services:
     networks:
       - cbioportal_net
   ensembl-rest:
-    image: docker.miracum.org/cbioportal/ensembl-rest:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/ensembl-rest:${RELEASE:-latest}
     restart: unless-stopped
     ports:
       - "8083:3000"
@@ -182,7 +182,7 @@ services:
     depends_on:
       - ensembl-mysql
   ensembl-mysql:
-    image: docker.miracum.org/cbioportal/ensembl-mysql:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/ensembl-mysql:${RELEASE:-latest}
     restart: unless-stopped
     networks:
       - cbioportal_net
