--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -57,7 +57,7 @@ services:
       - cbioportal_net
   nginx:
     restart: unless-stopped
-    image: docker.miracum.org/cbioportal/cbioproxy:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/cbioproxy:${RELEASE:-latest}
     container_name: cbioportal_nginx_container
     ports:
       - "${PORT:-8080}:8080"
@@ -67,7 +67,7 @@ services:
     networks:
       - cbioportal_net
   genomenexus:
-    image: docker.miracum.org/cbioportal/genome-nexus:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/genome-nexus:${RELEASE:-latest}
     environment:
       - SERVER_PORT=8888
     restart: unless-stopped
@@ -85,7 +85,7 @@ services:
     networks:
       - cbioportal_net
   genomenexus_db:
-    image: docker.miracum.org/cbioportal/genome-nexus-db:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/genome-nexus-db:${RELEASE:-latest}
     volumes:
       - genomenexus_data:/bitnami/mongodb
     environment:
@@ -95,7 +95,7 @@ services:
     networks:
       - cbioportal_net
   ensembl-rest:
-    image: docker.miracum.org/cbioportal/ensembl-rest:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/ensembl-rest:${RELEASE:-latest}
     restart: unless-stopped
     volumes:
       - ./config/ensembl_rest.conf:/opt/vep/src/ensembl-rest/ensembl_rest.conf
@@ -104,7 +104,7 @@ services:
     depends_on:
       - ensembl-mysql
   ensembl-mysql:
-    image: docker.miracum.org/cbioportal/ensembl-mysql:${RELEASE:-latest}
+    image: harbor.miracum.org/cbioportal/ensembl-mysql:${RELEASE:-latest}
     restart: unless-stopped
     networks:
       - cbioportal_net
