--- a/services/cbioproxy/Dockerfile
+++ b/services/cbioproxy/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.miracum.org/cbioportal/cbioportal:${RELEASE:-latest} as static
+FROM harbor.miracum.org/cbioportal/cbioportal:${RELEASE:-latest} as static
 
 FROM nginx:stable-alpine
 COPY --from=static /cbioportal-webapp /usr/share/nginx/html
