--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ data/*.sql.gz
 config/portal.properties
 **/.DS_Store
 .env
-!tools/cbpManager.deploy/shinyproxy/application.yml
+!tools/cbpManager/shinyproxy/application.yml
+tools/cbpManager/shinyproxy-logs/*
