--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,42 @@
-#Release version e.g. 2020q2 or simply latest
+# Release version e.g. 2021q1 or simply latest
 RELEASE=latest
 
-#Network configuration
+# Network configuration
 PORT=8080
 
-#MySQL configuration
+# MySQL configuration
 MYSQL_ROOT_PASSWORD=P@ssword1
 MYSQL_USER_PASSWORD=P@ssword1
 
-#PostgreSQL configuration for FHIR Database
+# PostgreSQL configuration for FHIR Database
 POSTGRES_USER_PASSWORD=P@ssword2
 
-#cBioPortal configuration
+# cBioPortal configuration
 
-#If you enter an OncoKB Token uncomment the following line
+# If you enter an OncoKB Token uncomment the following line
 #ONCOKB_URL=https://www.oncokb.org/api/v1
 #ONCOKB_TOKEN=
 ENABLE_QUICKSEARCH=true
 
-#Authentication configuration
-AUTHENTICATE=noauthsessionservice
+# Authentication configuration
+AUTHENTICATE=noauthsessionservice #either noauthsessionservice oder saml
+# generate keystore using: keytool -genkey -alias secure-key -keyalg RSA -keystore samlKeystore.jks
+#KEYSTORE_KEY=secure-key
+#KEYSTORE_PASSWORD=somepassword
+#KEYCLOAK_URL=
+#CBIOPORTAL_URL=
+#KEYCLOAK_REALM=
 
-#Annotation configuration
+# keycloak for fhirspark
+#KEYCLOAK_CLIENT=
+#KEYCLOAK_SECRET=
+
+#A nnotation configuration
 ENABLE_CIVIC=true
-#Please disable (set to false) when using cBioPortal with patient identifiable data due My Cancer Genome license restrictions.
+# Please disable (set to false) when using cBioPortal with patient identifiable data due My Cancer Genome license restrictions.
 ENABLE_MYCANCERGENOME=false
 
-#Therapy recommendation - HL7 v2 configuration (optional)
-#HL7V2ENABLE=true
-#HL7V2SERVER=hostname-here
-#HL7V2PORT=1011
+# Therapy recommendation - HL7 v2 configuration (optional)
+# HL7V2ENABLE=true
+# HL7V2SERVER=hostname-here
+# HL7V2PORT=1011
