--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -1,6 +1,17 @@
 server {
 
   listen 8080;
+  # listen 443 ssl
+
+  # ssl_certificate /etc/nginx/certs/ngxCert.crt;
+  # ssl_certificate_key /etc/nginx/certs/ngxKey.key;
+
+  # lua_ssl_verify_depth 2;
+  # lua_ssl_trusted_certificate /etc/nginx/certs/ngxCert.crt;
+
+  set $NGINX_LOGINREQUIRED 'true';
+
+  set $session_name nginx_session;
 
   location ~ (/content|/css|/Data|/db-scripts|/fonts|/gfx|/images|/js|/reactapp|/swf)$ {
 
@@ -29,6 +40,20 @@ server {
 
   location /mtb {
 
+    set $apply_login 'true';
+
+    if ($request_method = GET) {
+        set $apply_login 'false';
+    }
+
+    if ($NGINX_LOGINREQUIRED = 'false') { 
+        set $apply_login 'false';
+    }
+
+    if ($apply_login = 'true') { 
+        include /etc/nginx/conf.d/lua_auth_config.lua;
+    }
+
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
@@ -38,9 +63,45 @@ server {
 
     proxy_pass http://fhirspark:3001;
 
+
+
+    location ~* /mtb/(.+)/permission {
+          if ($NGINX_LOGINREQUIRED = 'true') { 
+              include /etc/nginx/conf.d/lua_auth_config.lua;
+          }
+          #add_header Access-Control-Allow-Origin '*';
+          add_header Cache-Control 'no-cache, no-store, max-age=0';
+          add_header Pragma 'no-cache';
+          proxy_pass http://fhirspark:3001;
+    }	
+
+    location /mtb/login {
+          default_type 'text/html';
+          if ($NGINX_LOGINREQUIRED = 'true') { 
+              include /etc/nginx/conf.d/lua_auth_config.lua;
+          }
+          include /etc/nginx/conf.d/lua_login_config.lua;
+    }
+	
+    location /mtb/logout {
+        if ($NGINX_LOGINREQUIRED = 'true') { 
+            include /etc/nginx/conf.d/lua_auth_config.lua;
+        }
+    }
+
+    location /mtb/redirect {
+        if ($NGINX_LOGINREQUIRED = 'true') { 
+            include /etc/nginx/conf.d/lua_auth_config.lua;
+        }
+    }
+
   }
 
   location /fhir {
+
+        if ($NGINX_LOGINREQUIRED = 'true') { 
+            include /etc/nginx/conf.d/lua_auth_config.lua;
+        }					   
 
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
@@ -54,6 +115,8 @@ server {
   }
 
   location /genome-nexus {
+
+    resolver 127.0.0.11;
 
     rewrite ^/genome-nexus/(.*) /$1 break;
     proxy_headers_hash_max_size 512;
@@ -74,6 +137,5 @@ server {
     root /usr/share/nginx/html;
 
   }
-
 
 }
