--- a/.github/workflows/docker-build-research.yml
+++ b/.github/workflows/docker-build-research.yml
@@ -11,4 +11,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build research containers
-        run: docker-compose --f docker-compose-research.yml build
+        run: docker-compose -f docker-compose-research.yml build cbioportal
+      - name: Build research cbioproxy
+        run: docker-compose -f docker-compose-research.yml build nginx
