fix session service and keycloak

--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -130,6 +130,21 @@ server {
 
   }
 
+  location /auth {
+
+    proxy_set_header Host               $http_host;
+    proxy_set_header X-Real-IP          $remote_addr;
+    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host   $host;
+    proxy_set_header X-Forwarded-Server $host;
+    proxy_set_header X-Forwarded-Port   $server_port;
+    proxy_set_header X-Forwarded-Proto  $scheme;
+
+    set_by_lua $keycloak 'return os.getenv("KEYCLOAK_URL")';
+
+    proxy_pass $keycloak;
+  }
+
   error_page 500 502 503 504 /50x.html;
 
   location = /50x.html {
