--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -78,7 +78,7 @@ services:
      - cbioportal_net
   cbioportal_session:
     restart: unless-stopped
-    image: cbioportal/session-service:latest
+    image: cbioportal/session-service:0.3.0
     container_name: cbioportal_session_container
     environment:
       SERVER_PORT: 5000
