add login required

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ POSTGRES_USER_PASSWORD=P@ssword2
 ENABLE_QUICKSEARCH=true
 
 # Authentication configuration
+LOGINREQUIRED=false
 AUTHENTICATE=noauthsessionservice #either noauthsessionservice oder saml
 # generate keystore using: keytool -genkey -alias secure-key -keyalg RSA -keystore samlKeystore.jks
 #KEYSTORE_KEY=secure-key
