add https proxy, fix #30

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ POSTGRES_USER_PASSWORD=P@ssword2
 #ONCOKB_TOKEN=
 ENABLE_QUICKSEARCH=true
 
+#HTTPS_PROXY_HOST=
+#HTTPS_PROXY_PORT=
+
 #Authentication configuration
 AUTHENTICATE=noauthsessionservice
 
