--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       "-Dshow.civic=${ENABLE_CIVIC:-true}",
       "-Dmycancergenome.show=${ENABLE_MYCANCERGENOME:-false}",
       "-Dquick_search.enabled=${ENABLE_QUICKSEARCH:-true}",
+      "-Dhttps.proxyHost=${HTTPS_PROXY_HOST}",
+      "-Dhttps.proxyPort=${HTTPS_PROXY_PORT}",
       "-jar",
       "/webapp-runner.jar",
       "-AmaxHttpHeaderSize=16384",
@@ -169,6 +171,7 @@ services:
     depends_on:
       - ensembl-mysql
   ensembl-mysql:
+    image: harbor.miracum.org/cbioportal/ensembl-mysql
     build:
       context: services/ensembl-mysql
     restart: unless-stopped
